--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,12 @@
                 <version>3.0.0-M5</version>
 
                 <configuration>
-                    <parallel>methods</parallel>
-                    <useUnlimitedThreads>false</useUnlimitedThreads>
-                    <threadCount>4</threadCount>
+                    <!--  <parallel>methods</parallel>
+                      <useUnlimitedThreads>false</useUnlimitedThreads>
+                      <threadCount>4</threadCount>
 
-                    <perCoreThreadCount>false</perCoreThreadCount>
-                    <!--    <testFailureIgnore>true</testFailureIgnore> -->
+                      <perCoreThreadCount>false</perCoreThreadCount> -->
+                          <testFailureIgnore>true</testFailureIgnore>
                     <includes>
                         <include>**/CukesRunner*.java</include>
                     </includes>
